# -license-plate-detection-system-

./: Dockerfile  README.md  docker-compose.yaml  main.ipynb  pyproject.toml
src/: __init__.py  detector.py  logger.py  main.py  model_impl.py  visualizer.py
