[tool.poetry]
name = "license-plate-detector"
version = "1.0.0"
description = "License Plate Detection System using YOLO"
authors = ["Developer"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"

ultralytics = "^8.3.0"
numpy = "^1.26.0"
pyyaml = "^6.0"
pillow = "^10.0.0"

opencv-python-headless = "^4.10.0"

# torch и torchvision ставятся отдельно под вашу платформу
# CPU:  pip install torch torchvision
# CUDA: pip install torch torchvision --index-url https://download.pytorch.org/whl/cu121
# См. https://pytorch.org/get-started/locally/

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.5.0"

[tool.poetry.scripts]
detect = "src.main:main"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"